# patchparse

./: .gitignore  Makefile  README  dune  dune-project  log_config.json  main.ml  patchparse.opam
boilerplate/: ast_al.ml  ast_al.mli  ast_visit.ml  change_tree_al.ml  change_tree_al.mli  dune
calendar/: Makefile  README  calendar.ml  dune  gitsearch.ml
classify/: dune  filter.ml  filter.mli  interface_filter.ml  interface_filter.mli  prepare_eq.ml  prepare_eq.mli  questions.ml  questions.mli
cli/: dune  main.ml
collect/: ceH.ml  ceH.mli  collect_evolutions4.ml  collect_evolutions4.mli  dune
commons/: .depend  Common.mli  aux.mli
core/: ast.ml  ast.mli  ast_al.ml  ast_unparse.ml  ast_unparse.mli  ast_visit.ml  cc.ml  ce.ml  ce.mli  ce_al.ml  ce_al.mli  ce_unparse.ml  ce_unparse.mli  ce_visit.ml  change.ml  change_table.ml  change_tree.ml  config2.ml  context_change.ml  dune  eq_classes.ml  evolution.ml  parse_error.ml  patch.ml  paths.ml  taxonomy.ml
diff/: ce_abstract.ml  ce_abstract.mli  ce_boring.ml  ce_boring.mli  diff.ml  diff.mli  dune  no_modifs.ml  no_modifs.mli  small.ml  small.mli
diff_generalize/: Makefile.old  dune  eqclasses.ml  eqclasses.mli  filter.ml  filter.mli  interface_filter.ml  interface_filter.mli  prepare_eq.ml  prepare_eq.mli  questions.ml  questions.mli
diff_select/: dune  select_diffs.ml  select_diffs.mli
eq_classes/: Makefile  collect_evolutions4.ml
eqclasses/: eqclasses.ml  eqclasses.mli  questions.ml  questions.mli
generalize_diffs/: dune  eqclasses.ml  filter.ml  filter.mli  interface_filter.ml  interface_filter.mli  prepare_eq.ml  questions.ml  questions.mli
get_input/: Makefile  git_reader.ml  git_reader.mli
git/: dune  git_reader.ml  git_reader.mli
globals/: Makefile.old  aux.ml  aux.mli  config.ml  dune  globals.ml
group/: dune  eqclasses.ml  eqclasses.mli
init/: dune  init.ml  init.mli
output/: Makefile  dune  mksp.ml  mksp.mli  mktex.ml  mktex.mli
parse_input/: Makefile  Makefile.old  ast.ml  ast.mli  ast0.ml  ast0.mli  ce.ml  ce.mli  clexer.ml  clexer.mll  cparser2.ml  cparser2.mli  cparser2.mly  diff.ml  dune  init.ml  init.mli  no_modifs.ml  parse_error.ml
parsing_code/: ast0.ml  ast0.mli  ast0_to_ast.ml  ast0_to_ast.mli  ast0_unparse.ml  clexer.mll  cparser2.mly  dune  parse_code.ml  parse_code.mli  parse_error.ml
parsing_patch/: dune  git_reader.ml  git_reader.mli  parse_patch.ml  parse_patch.mli  (+2 more)
(+22 files in other folders)
