opam-version: "2.0"
name: "patchparse"
version: "0.1.0"
synopsis: "Parsing patch"
description: """

"""

maintainer: "yoann.padioleau@gmail.com"

build: [
  ["dune build"]
]
install: [
  ["dune install"]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "dune"
  "yojson"
  "ppx_deriving"
  "ppx_hash"
  "easy_logging" { = "0.8.1" }
  "easy_logging_yojson" { = "0.8.1" }
]
