(executables
 (names main)
 (libraries
    str unix

    ; pfff deps

    ; internal deps
    globals
    core
    diff
    init
    get_input
    select_diffs
    generalize_diffs
    eq_classes
    output
 )
 (preprocess (pps ppx_profiling))
 ; for ocamldebug
 (modes byte)
)


(install
 (package patchparse)
 (section bin)
 (files (main.exe as patchparse))
)
