(executables
 (names main)
 (libraries
    str unix

    ; pfff deps
    commons

    ; internal deps
    globals
    core
    parsing_patch
    diff
    init
    select_diffs
    generalize_diffs
    eq_classes
    output
 )
 (preprocess (pps ppx_profiling))
 ; for ocamldebug
 (modes byte)
)


(install
 (package patchparse)
 (section bin)
 (files (main.exe as patchparse))
)
