(executables
 (names main)
 (libraries
    str unix

    ; pfff deps
    commons

    ; internal deps
    globals
    core
    parsing_patch
    diff
    init
    select_diffs
    eqclasses
    collect
    output
 )
; (preprocess (pps ppx_profiling)) ; optional, for -profile
 ; for ocamldebug
 (modes byte)
)


(install
 (package patchparse)
 (section bin)
 (files (main.exe as patchparse))
)
